--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ tag{
 content{
 	color: white;
 }
-#sky {
+sky {
 	width: 100%;
 	height: 100%;
 	display: block;
@@ -32,7 +32,7 @@ content{
 	100% {background:#7EC7E0;}
 }
 
-#moon {
+moon {
 	width: 11em;
 	height: 11em;
 	z-index: -60;
@@ -75,7 +75,7 @@ content{
         -webkit-transform:translate(40em, 40em) rotate(360deg) translate(-40em, -40em) rotate(-360deg);
     }
 }
-#sun {
+sun {
 	width: 14em;
 	height: 14em;
 	z-index: -60;
